--- a/FSService/FSService.fsproj
+++ b/FSService/FSService.fsproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="6.0.5" />
+  </ItemGroup>
+
 </Project>
