--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -1,15 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<OutputType>Library</OutputType>
+		<IsPublishable>False</IsPublishable>
+		<SelfContained>False</SelfContained>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="FSharp.Core" Version="6.0.5" />
-    <PackageReference Include="MongoDB.Bson" Version="2.17.1" />
-    <PackageReference Include="MongoDB.Driver" Version="2.17.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="FSharp.Core" Version="6.0.5" />
+		<PackageReference Include="MongoDB.Bson" Version="2.17.1" />
+		<PackageReference Include="MongoDB.Driver" Version="2.17.1" />
+	</ItemGroup>
 
 </Project>
