--- a/FSService/FSService.fsproj
+++ b/FSService/FSService.fsproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
@@ -13,10 +13,6 @@
 
 	<ItemGroup>
 		<PackageReference Include="MongoDB.FSharp" Version="0.1.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\Models\Models.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
